--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">AndroidFive</string>
+
+    <string name="style1">Style1: </string>
+    <string name="style2">Style2: </string>
+    <string name="system">System: </string>
+
+
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -89,4 +96,5 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+
 </resources>
